[gd_scene load_steps=21 format=3 uid="uid://cyxiujmawimfc"]

[ext_resource type="Texture2D" uid="uid://dhflfed5s8kpo" path="res://Guppa_enemy.png" id="1_qvnas"]
[ext_resource type="Script" path="res://enemy.gd" id="1_wdc24"]
[ext_resource type="Texture2D" uid="uid://cgch2vwfc1lmc" path="res://Guppa_enemy_surprised.png" id="2_j26mp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jf171"]
atlas = ExtResource("2_j26mp")
region = Rect2(256, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w750"]
atlas = ExtResource("1_qvnas")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ribw"]
atlas = ExtResource("1_qvnas")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2osv"]
atlas = ExtResource("2_j26mp")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuh81"]
atlas = ExtResource("1_qvnas")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_786i4"]
atlas = ExtResource("1_qvnas")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ognc2"]
atlas = ExtResource("1_qvnas")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvlmf"]
atlas = ExtResource("1_qvnas")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgy3v"]
atlas = ExtResource("1_qvnas")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_auc4y"]
atlas = ExtResource("1_qvnas")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d28g"]
atlas = ExtResource("1_qvnas")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8naqc"]
atlas = ExtResource("1_qvnas")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5rpy"]
atlas = ExtResource("1_qvnas")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n6c8"]
atlas = ExtResource("1_qvnas")
region = Rect2(0, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_iresp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf171")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w750")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ribw")
}],
"loop": true,
"name": &"blink_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2osv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w750")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ribw")
}],
"loop": false,
"name": &"blink_right",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"fill",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuh81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_786i4")
}],
"loop": true,
"name": &"stomp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ognc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvlmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgy3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auc4y")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d28g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8naqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5rpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n6c8")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rbh76"]
radius = 17.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21qus"]
size = Vector2(20, 4)

[node name="Enemy" type="Area2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_wdc24")
reg_speed = 100

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -19)
sprite_frames = SubResource("SpriteFrames_iresp")
animation = &"fill"
frame_progress = 1.0

[node name="reg_box" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_rbh76")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1, 1)

[node name="top_head" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -42)
scale = Vector2(1.96, 1)
shape = SubResource("RectangleShape2D_21qus")

[node name="on_ground" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="on_ground" to="." method="_on_on_ground_timeout"]
